force-app/main/default/objects/Community_Dashboard_Endpoint__mdt/Community_Dashboard_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Community Dashboard Endpoint</label>
    <pluralLabel>Community Dashboard Endpoints</pluralLabel>
</CustomObject>