force-app/main/default/objects/Community_Dashboard_Endpoint__mdt/fields/Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>Field_Labels__c</fullName>
    <inlineHelpText>Comma Separated list of the field labels. Should be in the same order as the field names to display.</inlineHelpText>
    <label>Field Labels</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>