force-app/main/default/objects/Community_Dashboard_Endpoint__mdt/fields/Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Display__c</fullName>
    <inlineHelpText>Enter Field API Names separated by &apos;,&apos; (comma).</inlineHelpText>
    <label>Fields To Display</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>